[package]
name = "android_opengl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
ndk-glue={ git="https://github.com/pigfall/android-ndk-rs", tag= "ndk-glue-0.5.0" , features=["logger"]}
log = "0.4.14"
env_logger = "0.9.0"
