[package]
name = "android_opengl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
ndk-glue={ git="https://github.com/pigfall/android-ndk-rs", tag= "ndk-glue-0.5.0" , features=["logger"]}
log = "0.4.14"
env_logger = "0.9.0"

#egl = { features=["dynamic"],package="khronos-egl",git="https://github.com/pigfall/khronos-egl", tag="4.1.0"}
egl = { features=["dynamic"],package="khronos-egl",git="https://github.com/pigfall/khronos-egl",branch="tzz_dev_base_on_4.1.0"}
#egl = { features=["dynamic"],package="khronos-egl",path="../khronos-egl/"}

glow = {git="https://github.com/pigfall/glow",branch="tzz_dev_base_on_v0.11.1"}
#glow = {path="../glow"}
